--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	</head>
 	<body>
 
-		<script src="../build/three.js"></script>
+		<script src="./js/three.js"></script>
 
 		<script>
 			var camera, scene, renderer;
